# rhea

./: ARCHITECTURE_SCALING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  providers.json  rhea-cli-server.service  tsconfig.json
.github/workflows/: publish.yml
.skills/rhea-client-install/: SKILL.md
.skills/rhea-coding/: SKILL.md
.skills/rhea-doctor/: SKILL.md
.skills/rhea-images/: SKILL.md
.skills/rhea-orchestrator/: SKILL.md
.skills/rhea-pairing/: SKILL.md
.skills/rhea-server-install/: SKILL.md
cli/: package.json
cli/src/: rhea-cli-server.ts  rhea-cli.ts
examples/: run-example.sh
examples/01-socratic-factory-cache/: README.md  requirement.txt
images/: package.json  tsconfig.json
images/src/: index.ts
lessons/: 01-cli-hallucinations.md  02-mcp-sdk-breaking-changes.md  04-esm-cjs-monorepo-trap.md  04-headless-image-realities.md  05-ssh-automation-bottlenecks.md  06-openrouter-endpoint-mapping.md  07-precision-trap-orchestration.md
lib/: package.json
lib/src/: cache.ts  config.ts  index.ts  pod.ts  prompts.ts  router.ts  rpc.ts  session.ts  workflow.ts
mcp/: package.json  tsconfig.json
mcp/src/: index.ts
python/: .foss-forge.json  README.md  pyproject.toml
python/src/rhea/: __init__.py  client.py
python/tests/: test_client.py
tests/: README.md  mock-model.sh
tests/fixtures/configs/: sample-client.json
tests/fixtures/prompts/: quantum.txt
tests/unit/: coding-factory.test.ts  fixtures.test.ts
(+2 files in other folders)
