[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhea-agi"
version = "0.1.0"
description = "Python client for Rhea: Sovereign Model Orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [
    { name = "Eidos AGI", email = "daniel@boone.voyage" },
]
keywords = ["ai", "orchestration", "socratic", "agents", "agi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/eidos-agi/rhea"

[tool.hatch.build.targets.wheel]
packages = ["src/rhea"]
